Added thext to livley web and smartwathces

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -22,7 +22,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 
 	\section{Introduction}
 		\subsection{History and Evolution of the Browser}
-		The following deals with history of the browsers and big improvements to the web throught some of these browsers. It continues with showing the fundamental technologies of browsers and features that were implemented later that helped improve the experience of using browsers. And at last this paper will discuss and explore the future of the browsers.
+		The report contains the history of the browsers and big improvements to the web through some of these browsers. It continues with showing the fundamental technologies of browsers and features that were implemented later that helped improve the experience of using browsers. And at last this paper will discuss and explore the future of the browsers.
 		\subsection{What is a Browser}
 		A Browser is an application that interprets HTML documents and data to render them to a Web page making the Web accessable. A browser lets you visit websites and do activities within them like login, view multimedia, link from one site to another, visit one page from another, print, send and receive email, among many other activities. The most common browser software titles on the market are: Microsoft Internet Explorer, Google's Chrome, Mozilla Firefox, Apple's Safari, and Opera. Browser availability depends on the operating system your computer is using (for example: Microsoft Windows, Linux, Ubuntu, Mac OS, among others).
 
@@ -112,23 +112,20 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			\subsubsection{Browser Chache}
 			\leavevmode\newline
 
-	%Prof meinte guter Fokus.
 	\section{Future of the Browser}
 	Nowadays there are already many ways to interact with a browser which seem rather futuristic. You can controll via voice, by hand gestures and even by just looking with your eyes. You are not just having you browser on your Computer but also on your phone, your watch and floating in the air infront of you.
-	%Pic of alexa, firefox vr, eye study
 		\subsection{Browsers becoming operating systems}
 		One of Alan Kay's main crizisms about the Web is the absence of an computational abilty for the browser. His vision is for them to be like  mini-operating systems and being able to execute localy. So it is possible for example if you want to learn an programming language you can just write code on the website and execute it on your computer. The patches where already steps into the right direction. Another part is to make website be like applications and with web applications like google docs or Microsoft office home the browser is going towards that vision. These make it possible to create, send and receive content like documents or tables while other people can access them simultaneously. It is for sure that more applications like these will be released.
-
+		%TODO Explain howit works
 		An good example for a website supporting Alan Kay's vision is lively-web.org
 		%Screenshot
 		Everything that is displayed on the website is an object and can be changed, moved or overwritten and gives immediate feedback to the user. Every textfield is able to execute Javascript. You can create your own website or application and are able to edit and download it from everywhere.
-		%TODO How does it work?
-		%Before after Picture
-		%Book,
+		[]
 		\subsection{New technologies}
+		New technologies are constantly thrown on the market and Browsers always have to find a way to make them them accessible to the web with bringing as many features as possible from other devices and new ones that fit the device
 			\subsubsection{WebVR Browsers}
 				\leavevmode\newline
-				Virtual Reality Browsers are making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browsers makes it possible to watch 360 degrees videos or pictures. Developers are able to create WebVR Applications themself and put them on the web just like a website. Vr-Browsers like Firefox Reality or Supermedium Browser allow to display websites not like a 2D Sheet but rather like a 3D environment without having to download content. These evironments can also be experiences, see second picture, games or creative activities like 3D painting.
+				Virtual Reality Browsers are making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browsers makes it possible to watch 360 degrees videos or pictures. Developers are able to create WebVR Applications themself and put them on the web just like a website. Vr-Browsers like Firefox Reality or Supermedium Browser allow to display websites not like a 2D Sheet but rather like a 3D environment without having to download content. These evironments can also be experiences, see second picture, games or creative activities like 3D painting.[4]
 			\begin{center}
 				\includegraphics[scale=0.35]{Firefox_Reality.png}
 				[4]	Firefox Reality
@@ -138,24 +135,30 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			\subsubsection{AR Browsers}
 				\leavevmode\newline
 				Just like normal Browsers is an Air Browser an applciation. The difference is that AR Browsers are for phone or tablet use only. Their purpose is to display additional informations on a camera screen. These Informations can be 2D markers or 3D objects for example.Just like most of VR Browsers they also rely on content creators. 
-				%https://www.augmented-minds.com/de/erweiterte-realitaet/ar-app-und-ar-browser/
-			\subsubsection{Quantum computing}
+				[19]
+			\subsubsection{Smartwatches}
 			\leavevmode\newline
-				Another big topic of these times is quantum computing. Quantum computers would make it significantly easier to decrypt keys for the secure transport of data between the browser and servers. Thats why since a couple of years institutes around the world are looking for algorithms that are post-quantum secure. Meaning that their generated keys can withstand the decryption of an quantum computer longer than algorithms nowadays like RSA. Browsers will need to adapt to these changes in order to asure security for it's customers and stay competitve on the market. 
-				%TODO 	https://www.f5.com/labs/articles/threat-intelligence/how-quantum-computing-will-change-browser-encryption
+			With the release of smartwatches companies needed to find yet another way to display browsers. The small screen does not offer enough space to fit the usual user interface or keyboard. So one way is to add a website on a connected device to the favorite list so it is possible to access the website by just one touch on your watch. But also it is possible to connect the smartphone with the watch an use its keyboard.[19]
+			\begin{center}
+				\includegraphics[scale=0.35]{Smartwatch.jpg}
+				
+				[20] Web Browser for Wear OS on Android	
+			\end{center}
+		\subsection{Quantum computing}
+		\leavevmode\newline
+			Another big topic of these times is quantum computing. Quantum computers would make it significantly easier to decrypt keys for the secure transport of data between the browser and servers. Thats why since a couple of years institutes around the world are looking for algorithms that are post-quantum secure. Meaning that their generated keys can withstand the decryption of an quantum computer longer than algorithms nowadays like RSA. Browsers will need to adapt to these changes in order to asure security for it's customers and stay competitve on the market. 
+			[21]
 		\subsection{Next for Browsers}
 			Since the introduction of the browser a little and a lot has changed. It gained on speed, performance, security and usabilty. These attributes with grow in the future as well for sure. 
 			Opera created an concept for how they imagine user friendliness will be in the near future with their Browser. It is already downloadable, but Opera Neon is still a work in progress.
 		 	\begin{center}
 		 		\includegraphics[scale=0.35]{OperaNeon.png}
-		 		[?]	Startscreen of Opera Neon
+		 		Startscreen of Opera Neon
 		 	\end{center}
 		 	
 			Even though the steps are small, Browsers are becoming more and more like operating systems and with that closer to the original vision of Alan Key. But they still have a long way to go since the they werent designed for that purpose.
-			Web 3.0 which is supposed to help the user to deal with the amount of information on the web. This might also force Browsers to make a change but into which direction and to what degree can't be determined at this stage. We might even see a completely new type but if so it needs to be initiated by one of the major browser companies. 	 
-			%TODO Opera Neon source
-			%TODO Source https://www.lifewire.com/web-3-0-end-web-browser-3486610
-			Little changed so farfaster, performance, Ux(Opera Neon), Vr-> Being in a store? Getting closer to mini-operating system, Sicherheit
+			Web 3.0 which is supposed to help the user to deal with the amount of information on the web. This might also force Browsers to make a change but into which direction and to what degree can't be determined at this stage. We might even see a completely new type but if so it needs to be initiated by one of the major browser companies.[22]
+			%Little changed so farfaster, performance, Ux(Opera Neon), Vr-> Being in a store? Getting closer to mini-operating system, Sicherheit
 	\section{Evaluation}
 
 	\section{Summery/Conclusion}
@@ -166,12 +169,6 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	[2] \url{http://gs.statcounter.com/browser-market-share#monthly-200901-201905}
 	\newline
 	[3]\url{https://security.stackexchange.com/questions/19681/where-does-ssl-encryption-take-place}, used 12.06.2019
-	[4]
-	\url{https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/}
-	\newline
-	[5]
-	\url{https://www.supermedium.com/#gallery_1-1}
-	\newline
 	[6] "The Web Was Done by Amateurs" by Marco Aiello, ISBN 978-3-319-90007-0 \newline
 	[7] "Microsoft and the Browser Wars" by Robert A.Levy, \url{https://pdfs.semanticscholar.org/1cf1/97ab7738244f2c45e6acec67051eb85f6243.pdf}, used for further reference in the browser wars times
 	\newline
@@ -200,8 +197,32 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	[17] \url{
 		https://help.opera.com/en/operas-archived-history/}, used 27.05.2019
 	\newline
+	[17] \url{
+		https://lively-web.org/welcome.html}, used 05.05.2019
+	\newline
+	[4]
+	\url{https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/}
+	\newline
+	[5]
+	\url{https://www.supermedium.com/#gallery_1-1}
+	\newline
 	[18] \url{
 		https://www.googlewatchblog.de/2018/09/jahre-google-chrome-so-2/}, used 27.05.2019
+	\newline
+	[19] \url{
+		https://www.augmented-minds.com/de/erweiterte-realitaet/ar-app-und-ar-browser/}, used 27.05.2019
+	\newline
+	
+	[19] \url{http://www.die-smartwatch.de/2014/07/26/wear-internet-browser-surfen-auf-der-smartwatch.html}, used 26.06
+	\newline
+	[20] \url{
+		https://play.google.com/store/apps/details?id=com.appfour.wearbrowser&hl=de}, used 26.06
+	\newline
+	[21] \url{
+		https://www.f5.com/labs/articles/threat-intelligence/how-quantum-computing-will-change-browser-encryption}, used 26.06
+	\newline
+	[22] \url{
+		https://www.lifewire.com/web-3-0-end-web-browser-3486610}, used 26.06
 	\newline
 	
 	
