Changed sources in text

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -128,12 +128,12 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	One of Alan Kay's main crizisms about the Web is the absence of an computational abilty for the browser. His vision is for them to be like  mini-operating systems and being able to execute localy. So it is possible for example if you want to learn an programming language you can just write code on the website and execute it on your computer. The patches where already steps into the right direction. Another part is to make website be like applications and with web applications like google docs or Microsoft office home the browser is going towards that vision. These make it possible to create, send and receive content like documents or tables while other people can access them simultaneously. It is for sure that more applications like these will be released.
 	An good example for a website supporting Alan Kay's vision is lively-web.org an open source web programming evironment.
 	Everything that is displayed on the website is an object and can be changed, moved or overwritten and gives immediate feedback to the user. Every textfield is able to execute Javascript. You can create your own website or application and are able to edit and download it from everywhere without having to install any software.
-	[]
+	[26]
 		\subsection{New technologies}
 		New technologies are constantly thrown on the market and Browsers always have to find a way to make them them accessible to the web with bringing as many features as possible from other devices and new ones that fit the device
 			\subsubsection{WebVR Browsers}
 				\leavevmode\newline
-				Virtual Reality Browsers are making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browsers makes it possible to watch 360 degrees videos or pictures. Developers are able to create WebVR Applications themself and put them on the web just like a website. Vr-Browsers like Firefox Reality or Supermedium Browser allow to display websites not like a 2D Sheet but rather like a 3D environment without having to download content. These evironments can also be experiences, see second picture, games or creative activities like 3D painting.[4]
+				Virtual Reality Browsers are making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browsers makes it possible to watch 360 degrees videos or pictures. Developers are able to create WebVR Applications themself and put them on the web just like a website. Vr-Browsers like Firefox Reality or Supermedium Browser allow to display websites not like a 2D Sheet but rather like a 3D environment without having to download content. These evironments can also be experiences, see second picture, games or creative activities like 3D painting.[19]
 			\begin{center}
 				\includegraphics[scale=0.35]{Firefox_Reality.png}
 				[19]	Firefox Reality
@@ -207,9 +207,6 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\newline
 	[17] "The Web Was Done by Amateurs" by Marco Aiello, ISBN 978-3-319-90007-0 
 	\newline
-	[] \url{
-		https://lively-web.org/welcome.html}, used 05.05.2019
-	\newline
 	[18] \url{https://www.techopedia.com/definition/1352/uniform-resource-locator-url}, 25.06.2019
 	\newline
 	[19] \url{https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/}, used 27.05.2019
@@ -229,5 +226,8 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\newline
 	[25] \url{
 		https://www.lifewire.com/web-3-0-end-web-browser-3486610}, used 26.06
+	\newline
+	[26] \url{
+		https://lively-web.org/welcome.html}, used 05.05.2019
 	\newline
 \end{document}
