Added subsection with an overview for the Evolution

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -121,7 +121,11 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			The first web browsers did not have tabs as we know them from most modern browsers. While many may consider \textit{Opera} to be the browser to introduce tabbed browsing, \textit{Opera} had a  \textit{Multiple Document Interface} instead. This may seem similar but is substantial different to a \textit{Tabbed Document Interface}. The actual first browser supporting tabs was the \textit{Internet Explorer} Shell "NetCaptor", first released in 1997. The browser to mainstream browser tabs was however Firefox or more specifically its predecessor \textit{Phoenix}.
 			\subsubsection{Browser Chache}
 			\leavevmode\newline
-
+		\subsection{Evolution Overview}
+		\begin{center}
+		\includegraphics[scale=0.205]{PanoramaEvoOfBr.JPEG}
+		Evolution of the Browser [27]
+		\end{center}
 	\section{Future of the Browser}
 	Nowadays there are already many ways to interact with a browser which seem rather futuristic. You can controll via voice, by hand gestures and even by just looking with your eyes. You are not just having you browser on your Computer but also on your phone, your watch and floating in the air infront of you.
 		\subsection{Browsers becoming operating systems}
@@ -229,5 +233,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\newline
 	[26] \url{
 		https://lively-web.org/welcome.html}, used 05.05.2019
+	\newline
+	[27] \url{	http://www.evolutionoftheweb.com/?hl=de#/evolution/night}, used 05.05.2019
 	\newline
 \end{document}
