Added year to some Sources

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -201,9 +201,9 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\newline
 	[12] \url{https://www.torproject.org/about/history/}, used 25.06.2019
 	\newline
-	[13]\url{https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Timeline_of_web_browsers.svg/3560px-Timeline_of_web_browsers.svg.png}
+	[13]\url{https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Timeline_of_web_browsers.svg/3560px-Timeline_of_web_browsers.svg.png} 12.06.2019
 	\newline
-	[14] \url{http://gs.statcounter.com/browser-market-share#monthly-200901-201905}
+	[14] \url{http://gs.statcounter.com/browser-market-share#monthly-200901-201905} 14.06.2019
 	\newline
 	[15] \url{https://netmarketshare.com/browser-market-share.aspx}, used 01.07.2019
 	\newline
@@ -218,18 +218,18 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	[20]
 	\url{https://www.supermedium.com/#gallery_1-1}
 	\newline	
-	[21] \url{https://www.augmented-minds.com/de/erweiterte-realitaet/ar-app-und-ar-browser/}, used 26.06
+	[21] \url{https://www.augmented-minds.com/de/erweiterte-realitaet/ar-app-und-ar-browser/}, used 26.06.19
 	\newline
 	[22]
-	\url{http://www.die-smartwatch.de/2014/07/26/wear-internet-browser-surfen-auf-der-smartwatch.html}
+	\url{http://www.die-smartwatch.de/2014/07/26/wear-internet-browser-surfen-auf-der-smartwatch.html} used 24.06.19
 	\newline
 	[23] \url{
-		https://play.google.com/store/apps/details?id=com.appfour.wearbrowser&hl=de}, used 26.06
+		https://play.google.com/store/apps/details?id=com.appfour.wearbrowser&hl=de}, used 26.06.19
 	\newline
-	[24] \url{	https://www.f5.com/labs/articles/threat-intelligence/how-quantum-computing-will-change-browser-encryption}, used 26.06
+	[24] \url{	https://www.f5.com/labs/articles/threat-intelligence/how-quantum-computing-will-change-browser-encryption}, used 26.06.19
 	\newline
 	[25] \url{
-		https://www.lifewire.com/web-3-0-end-web-browser-3486610}, used 26.06
+		https://www.lifewire.com/web-3-0-end-web-browser-3486610}, used 26.06.19
 	\newline
 	[26] \url{
 		https://lively-web.org/welcome.html}, used 05.05.2019
