Changed numery of sources

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -207,33 +207,43 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\newline
 	[15] \url{https://netmarketshare.com/browser-market-share.aspx}, used 01.07.2019
 	\newline
-	[16]\url{https://security.stackexchange.com/questions/19681/where-does-ssl-encryption-take-place}, used 12.06.2019
+	[16] "The Web Was Done by Amateurs" by Marco Aiello, ISBN 978-3-319-90007-0 
 	\newline
-	[17] "The Web Was Done by Amateurs" by Marco Aiello, ISBN 978-3-319-90007-0 
+	[17]\url{https://security.stackexchange.com/questions/19681/where-does-ssl-encryption-take-place}, used 12.06.2019
 	\newline
-	[18] \url{https://www.techopedia.com/definition/1352/uniform-resource-locator-url}, 25.06.2019
+	[18] \url{https://en.m.wikipedia.org/wiki/JavaScript_engine
+		https://t3n.de/magazin/javascript-engines-turbolader-fuer-browser-247188/
+		https://patents.google.com/patent/US6892200B2/en
+		https://v8.dev/}, used 25.06.2019
 	\newline
-	[19] \url{https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/}, used 27.05.2019
+	[19] \url{https://www.techopedia.com/definition/1352/uniform-resource-locator-url}, 25.06.2019
 	\newline
 	[20]
+	\url{https://en.m.wikipedia.org/wiki/Browser_engine
+		https://www.pcmag.com/encyclopedia/term/61819/browser-rendering-engine
+		https://stackoverflow.com/questions/46169376/whats-the-difference-between-a-browser-engine-and-rendering-engine}26.06
+	\newline
+	[21] \url{http://www.evolutionoftheweb.com/?hl=de#/evolution/night}, used 05.05.2019
+	\newline
+	[22] \url{
+	https://lively-web.org/welcome.html}, used 05.05.2019
+	\newline
+	[23] \url{https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/}, used 27.05.2019
+	\newline
+	[24]
 	\url{https://www.supermedium.com/#gallery_1-1}
 	\newline	
-	[21] \url{https://www.augmented-minds.com/de/erweiterte-realitaet/ar-app-und-ar-browser/}, used 26.06.19
+	[25] \url{https://www.augmented-minds.com/de/erweiterte-realitaet/ar-app-und-ar-browser/}, used 26.06.19
 	\newline
-	[22]
+	[26]
 	\url{http://www.die-smartwatch.de/2014/07/26/wear-internet-browser-surfen-auf-der-smartwatch.html} used 24.06.19
 	\newline
-	[23] \url{
-		https://play.google.com/store/apps/details?id=com.appfour.wearbrowser&hl=de}, used 26.06.19
+	[27] \url{
+	https://play.google.com/store/apps/details?id=com.appfour.wearbrowser&hl=de}, used 26.06.19
 	\newline
-	[24] \url{	https://www.f5.com/labs/articles/threat-intelligence/how-quantum-computing-will-change-browser-encryption}, used 26.06.19
+	[28] \url{	https://www.f5.com/labs/articles/threat-intelligence/how-quantum-computing-will-change-browser-encryption}, used 26.06.19
 	\newline
-	[25] \url{
-		https://www.lifewire.com/web-3-0-end-web-browser-3486610}, used 26.06.19
-	\newline
-	[26] \url{
-		https://lively-web.org/welcome.html}, used 05.05.2019
-	\newline
-	[27] \url{	http://www.evolutionoftheweb.com/?hl=de#/evolution/night}, used 05.05.2019
+	[29] \url{
+	https://www.lifewire.com/web-3-0-end-web-browser-3486610}, used 26.06.19
 	\newline
 \end{document}
